--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   servlet:
-    context-path=/api/v1:
+    context-path: /api/v1
 
 spring:
   kafka:
@@ -12,6 +12,12 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 #      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages:
+                com.knowledgetree.model
     producer:
       bootstrap-servers:
         - localhost:9092
